objects/Survey_Question_Route__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnsSequence__c</fullName>
        <description>Feed Outbound - AnsSequence</description>
        <formula>TEXT(Answer__r.Answer_Sequence__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AnsSequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnswerID__c</fullName>
        <description>Feed Outbound - AnswerID</description>
        <formula>Answer__r.Answer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AnswerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Answer</label>
        <referenceTo>Question_Answer_Mapping__c</referenceTo>
        <relationshipLabel>Survey Questions Route</relationshipLabel>
        <relationshipName>Survey_Questions_Route</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommentRequiredText__c</fullName>
        <formula>if(CommentRequired__c,&apos;REQUIRED&apos;,&apos;OPTIONAL&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommentRequiredText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CommentRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Feed Outbound - CreatedDate Format.</description>
        <formula>MID( TEXT(CreatedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>Feed Outbund - Format LastModifiedDate</description>
        <formula>MID( TEXT(LastModifiedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiAnswers__c</fullName>
        <description>Feed Outbound - MultiAnswers</description>
        <formula>Question_From__r.Question__r.MultiAnswers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MultiAnswers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMQuestionID__c</fullName>
        <description>Feed Outbound - PMQuestionID</description>
        <formula>TEXT(Question_From__r.Question__r.PMQuestionID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PMQuestionID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionID__c</fullName>
        <description>Feed Outbound - Question ID</description>
        <formula>Question_From__r.QuestionID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuestionID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_From__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question From</label>
        <referenceTo>SurveyQuestionMapping__c</referenceTo>
        <relationshipLabel>Survey Questions Route</relationshipLabel>
        <relationshipName>Survey_Questions_Route</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Required__c</fullName>
        <description>Feed Outbound - Question_Required</description>
        <formula>IF(Question_From__r.Required__c==TRUE, &apos;YES&apos;, &apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question_Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Sequence__c</fullName>
        <description>Feed Outbound - Question Sequence</description>
        <formula>TEXT(Question_From__r.Question_Sequence__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Sequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_To_Go_To_Text__c</fullName>
        <formula>Question_To_Go_To__r.QuestionText__c</formula>
        <label>Question To Go To Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_To_Go_To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question To Go To</label>
        <referenceTo>SurveyQuestionMapping__c</referenceTo>
        <relationshipLabel>Survey Questions Route (Question To Go To)</relationshipLabel>
        <relationshipName>Survey_Questions_Route1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_To_Go_To_c__c</fullName>
        <description>Feed Outbound - Question_To_Go_To__c</description>
        <formula>Question_To_Go_To__r.QuestionID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question_To_Go_To__c</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyID__c</fullName>
        <description>Feed Outbound - Survey ID</description>
        <formula>Survey__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyName__c</fullName>
        <description>Feed Outbound - Survey Name.</description>
        <formula>Survey__r.Survey_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Questions Route</relationshipLabel>
        <relationshipName>Survey_Questions_Route</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Question Route</label>
    <nameField>
        <displayFormat>SQR - {0000}</displayFormat>
        <label>Survey Question Route Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions Route</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>